Recon Works
Recon with photos is working in game